<resources>
    <string name="app_name">"coleliga"</string>

    <string name="navigation_drawer_open">"Open navigation drawer"</string>
    <string name="navigation_drawer_close">"Close navigation drawer"</string>

    <string name="action_settings">"Settings"</string>
    <string name="categorias">"Choose Category"</string>


    <string name="tipo_identificacion_prompt">"Select an Identification Type"</string>
    <string-array name="tipo_identificacion">
        <item>"National ID"</item>
        <item>"CIF"</item>
        <item>"PASSPORT"</item>
    </string-array>


    <string name="modalidad">"Method"</string>
    <string name="modoliguilla">"Liguilla"</string>
    <string name="modoliguilladesc">"System of all against all; all the participants of the tournament will confront between them in an opportunity"</string>
    <string name="modoeliminatoria">"Play off"</string>
    <string name="modoeliminatoriadesc">"Direct elimination system, the loser of a match is eliminated, while the winner advances to the next phase. Rounds are played."</string>
    <string name="modoeliminaciondirecta">"Direct elimination"</string>
    <string name="modoeliminaciondirectadesc">"System"</string>
    <string name="modomixta">"Mixed"</string>
    <string name="modomixtadesc">"Description"</string>
    <string name="modomanual">"Manual"</string>
    <string name="modomanualdesc">"Description"</string>

    <string name="accion_cancelar">"Cancel"</string>
    <string name="accion_aceptar">"OK"</string>
    <string name="accion_actualizar">"Update"</string>
    <string name="accion_crear">"Create"</string>

    <string name="op_privado">"Private"</string>
    <string name="op_publico">"Public"</string>

    <string name="hint_nomtorneo">"Name of the tournament"</string>
    <string name="hint_precio">"10.00"</string>
    <string name="hint_organizador">"Name of the Organizer"</string>

    <string name="ingresa_correo_tel">Put your name or phone</string>
    <string name="equipo">"Teams"</string>
    <string name="pj">"MP"</string>
    <string name="pg">W</string>
    <string name="pp">"L"</string>
    <string name="pts">"PTS"</string>
    <string name="pe">"D"</string>
    <string name="nombre_del_equipo">"Name of the team"</string>
    <string name="logo_direccion">"address logo"</string>
    <string name="entrenador">"Indicates the trainer, by default you will be your!"</string>
    <string name="donde_es_equipo">"Indicates where the team is from"</string>
    <string name="jugadores_maximo">"Indicates the maximum players"</string>
    <string name="mis_equipos">"My teams"</string>
    <string name="entrenamientos">"Training"</string>
    <string name="mis_partidos">"My matches"</string>
    <string name="resultados">"Results"</string>
    <string name="clasificaciones">"Classifications"</string>
    <string name="instalaciones">"Installations"</string>
    <string name="mi_perfil">"My profile"</string>
    <string name="posibles">"16 of 24 possible"</string>
    <string name="direccion1">"Avda. Casalduch 29D, 9º 18 12005 Castelló"</string>
    <string name="senior">"Senior"</string>
    <string name="guardiola">"Guardiola"</string>
    <string name="nombre_del_partido">"Name of the Match"</string>
    <string name="lugar">"Place"</string>
    <string name="logo_de_la_fecha">"date logo"</string>
    <string name="dd_mm_aaaa_hh_mm">"dd / MM / yyyy HH: mm"</string>
    <string name="equipo_a">"Team A"</string>
    <string name="equipo_b">"Team B"</string>
    <string name="cantidad_maxima_de_jugadores">"Maximum number of players"</string>
    <string name="fecha1">"16/11/2017"</string>
    <string name="vs">"VS"</string>
    <string name="nombre_lugar">"Place name"</string>
    <string name="direccion2">"C / Paloma Blanca 12, 28021. Madrid"</string>
    <string name="descripcion_lugar1">"More than 4 tracks (soccer 11) available. Regulatory measures"</string>
    <string name="web">"WEB"</string>
    <string name="de_10_00h_20_00h">"from 10:00H / 20:00H"</string>
    <string name="telefono">"Phone"</string>
    <string name="crear_cuenta">"Create Account"</string>
    <string name="contrasena">"Password"</string>
    <string name="ingresa_contrasena">"Enter the password"</string>
    <string name="correo_electronico">"E-mail"</string>
    <string name="ingresa_correo">"Enter your email"</string>

    <string name="txt_splash">COLELIGA</string>
    <string name="txt_splash2">Tus partidos y torneos al instante!</string>

    <string name="transition_name_escudo">transition:ESCUDO</string>
    <string name="transition_name_equipo">transition:EQUIPO</string>


    <string name="google">"Google"</string>
    <string name="facebook">"Facebook"</string>
    <string name="coleliga">"COLELIGA"</string>
    <string name="acceder">"TO ACCESS"</string>
    <string name="user_name">"User Name"</string>
    <string name="password">"Password"</string>
    <string name="forgot_password">"Forgot Password?"</string>

    <string name="register">"Register"</string>
    <string name="correo_telefono">"e-mail or telephone"</string>
    <string name="ingresa_la_contrasena">"Enter the password"</string>

    <string name="iniciar_sesion">"Log in"</string>
    <string name="ahora_no">"Not now"</string>
    <string name="continuar_como_max">"Continue as MAX"</string>
    <string name="coleliga_recibira_perfil">"Coleliga will receive your public profile and email address"</string>
    <string name="continuar">"Continue"</string>
    <string name="soy_organizador">"I AM ORGANIZER"</string>
    <string name="soy_dueno_de_lugar">"I AM THE OWNER OF PLACE"</string>
    <string name="soy_jugador">"I AM A PLAYER"</string>
    <string name="soy_entrenador">"I AM A TRAINER"</string>


    <string name="name_activity_lista_partidos">List of Matches </string>
    <string name="name_activity_detalle_partido"> Match Detail </string>
    <string name="name_activity_editar_partido">Edit Match </string>
    <string name="name_activity_pantalla_principal">Main </string>
    <string name="name_activity_lista_jugadores"> List of players </string>
    <string name="name_activity_organizador_nuevo">Organizer New </string>
    <string name="name_activity_entrenador_nuevo">New Trainer </string>
    <string name="name_activity_dueno_nuevo">New Place Owner </string>
    <string name="name_activity_jugador_nuevo">New Player </string>
    <string name="name_activity_selecciona_perfil">Select your profile </string>
    <string name="name_activity_crear_cuenta">Create Account </string>
    <string name="name_activity_login">Login</string>

    <string name="name_activity_editar_equipo">Edit Team </string>
    <string name="name_activity_equipo">Team </string>
    <string name="name_activity_listado_equipo">Equipment list </string>
    <string name="share_app">Share app</string>
    <string name="noads">Delete Ads</string>
    <string name="create_login">Create Login</string>
    <string name="foto_jugador">Foto Jugador</string>
    <string name="nombre">Nombre</string>
    <string name="nickname">Nickname</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="pais">Pais</string>
    <string name="ciudad">Ciudad</string>
    <string name="submit">Submit</string>
    <string name="posiciones">Posiciones</string>
    <string name="delantero">Delantero</string>
    <string name="mediocampista">MedioCampista</string>
    <string name="defensa">Defensa</string>
    <string name="portero">Portero</string>
    <string name="razon_social">Nombre ó Razón Social</string>
    <string name="identificacion">Identificación</string>
    <string name="movil_contacto">Móvil de Contacto</string>
    <string name="iniciar_facebook">Inicia sesión en tu cuenta de Facebook para conectarte con Coleliga</string>

    <string name="aviso">"APPLICATION IN TEST: This application has been developed to learn programming at Android Platform. No user information is stored for its use."</string>
    <string name="vota_5_estrellas">RATE 5 STARS</string>
    <string name="contact_author">CONTACT AUTHOR</string>
    <string name="_2_have_problems_please_contact_author_to_report_issue">2. Have problems, please contact author to report issue</string>
    <string name="_1_love_masterlistas_please_rate_5_star_in_play_store">1. Love MasterListas, please rate 5 star in Play Store</string>
    <string name="please_take_a_second_for_rate">Please take a second for rate</string>
</resources>